# SER334-assignment3

./: .gitignore  BMPHandler.c  BmpProcessor.c  CMakeLists.txt  HakobyanFilters.c  HakobyanImageProcessor.c  Image.c  PixelProcessor.c  README.md
headers/: BMPHandler.h  Image.h
src/: BMPHandler.c  BaseFilters.c  HakobyanImageProcessor.c  HeaderUsageSample.c  Image.c  main.c
